--- a/Caddyfile
+++ b/Caddyfile
@@ -1,13 +1,4 @@
-n8n.<domain>.<suffix> {
-  reverse_proxy n8n:5678 {
-      flush_interval -1
-    }
+# Caddyfile
+n8n.example.com {
+    reverse_proxy n8n:5678
 }
-
-# automate.example.com {
-#     reverse_proxy n8n:5678 {
-#       flush_interval -1
-#     }
-# }
-
-
