Added domain and subdomain

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ POSTGRES_NON_ROOT_PASSWORD=AnotherSecretPassword
 
 # --- n8n encryption key (any 32-char random string is fine) ---
 ENCRYPTION_KEY=0123456789abcdef0123456789abcdef
+
+DOMAIN=n8nautomation.cloud
+SUB_DOMAIN=server
