--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,5 @@
-# Caddyfile
-n8n.example.com {
-    reverse_proxy n8n:5678
+server.n8nautomation.cloud {
+    reverse_proxy n8n:5678 {
+      flush_interval -1
+    }
 }
