--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ POSTGRES_NON_ROOT_PASSWORD=AnotherSecretPassword
 # --- n8n encryption key (any 32-char random string is fine) ---
 ENCRYPTION_KEY=0123456789abcdef0123456789abcdef
 
-DOMAIN=n8nautomation.cloud
-SUB_DOMAIN=server
+DOMAIN=example.com
+SUB_DOMAIN=automation
